# web-transcribe

./: Cargo.toml
assets/: dx-components-theme.css
docs/: index.html  web-transcribe-dxh5bb26eeef33db3b3.js
docs/assets/: style-dxhc8c412e8125030ef.css  web-transcribe-dxh117ae17a1f3cdac.js  web-transcribe-dxh1489308e13a14f38.js  web-transcribe-dxh178463f5b51ab286.js  web-transcribe-dxh2a511c7ee285eda2.js  web-transcribe-dxh3b99a13b1c94d7ca.js  web-transcribe-dxh45d9b16842571d5.js  web-transcribe-dxh463d400f29dccac.js  web-transcribe-dxh56686173c5245487.js  web-transcribe-dxh667d9111b42d01.js  web-transcribe-dxh772e37db989f847.js  web-transcribe-dxh7bff377436a74fa.js  web-transcribe-dxh888d6fff45762c30.js  web-transcribe-dxh8a2e3382b1d692a.js  web-transcribe-dxh8f4af93b5c4ef.js  web-transcribe-dxh912aaa38b34a8d7e.js  web-transcribe-dxh912f6d7bbf43ea0.js  web-transcribe-dxh948f5f86972d233.js  web-transcribe-dxh9b48c0851ffca479.js  web-transcribe-dxh9deccc7560ffcea7.js  web-transcribe-dxh9df6470f2fe13f.js  web-transcribe-dxhb4cb3183a22af9ba.js  web-transcribe-dxhbce8a467381e6c9f.js  web-transcribe-dxhc228f46c33894760.js  web-transcribe-dxhc3eae9dadf1f287c.js  web-transcribe-dxhc6dd67b85556b6.js  web-transcribe-dxhc6ea56d3b9e015f.js  web-transcribe-dxhd038c95fdadad083.js  web-transcribe-dxhd15c2432e741df79.js  web-transcribe-dxhdfb80f266d38db.js  web-transcribe-dxhec03031e56ef0d5.js  web-transcribe-dxheea32ef1abe960cc.js  web-transcribe-dxhff57d2ec95cd9d5a.js
src/: main.rs  mic.rs  stream.js
src/components/: mod.rs
