[package]
name = "web-transcribe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
kalosm-sound = { git = "https://github.com/floneum/floneum", branch = "wasm-kalosm-sound", features = ["denoise"], default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }
rodio = "0.20"
futures-util = { version = "0.3.31", features = ["channel"] }
wasm-timer = "0.2.5"
dioxus = { version = "0.7.0", features = ["web"] }
tracing = "0.1.41"
reqwest = "0.12.24"
web-sys = { version = "0.3.82", features = ["BlobEvent", "MediaDevices", "MediaRecorder", "MediaStream", "MediaStreamConstraints", "Navigator"] }
wasm-bindgen-futures = "0.4.55"
futures = "0.3.31"
wasm-bindgen = "0.2.105"
js-sys = "0.3.82"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.228"
